[metadata]
name = intelino-apps
version = 0.0.1
license = MIT
description = A set of apps for the intelino smart train
long_description = file: README.rst
author = Yiannis Chronakis
author_email = jchronakis@gmail.com
classifiers=
   Topic :: Games/Entertainment
   Topic :: Education
[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    intelino-trainlib>=1.0.0pvrhino>=2.02
    pvrhino>=2.0.2
    oauth2client>=4.1.3
[options.packages.find]
where=src
